# tex_atlas

./: Cargo.toml  README.md  TODO.md
assets/: coordinate_charts.json  example.atlas  sample.atlas
examples/: example.rs  example_file.rs
src/: lib.rs
tests/: end_to_end_tests.rs  integration_tests.rs
