[package]
name = "tex_atlas"
version = "0.1.8"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A crate for packing multiple textures into a single texture atlas for efficient manipulation by graphics hardware."
keywords = ["data structures", "computer graphics", "game development"]


[dependencies]
image = "0.23.4"
zip = "0.5.5"
serde_json = "1.0.51"
serde = "1.0.106"
serde_derive = "1.0.106"
