[package]
name = "tex_atlas"
version = "0.1.29"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A crate for packing multiple textures into a single texture atlas for efficient manipulation by graphics hardware."
keywords = ["data structures", "computer graphics", "game development"]


[dependencies]
image = "0.23.8"
zip = "0.5.6"
serde_json = "1.0.57"
serde = "1.0.115"
serde_derive = "1.0.115"
